Logout api + status codes
